sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: value trié is not a member of Unit
possible cause: maybe a semicolon is missing before `value trié'?
		} trié=true
                  ^